Add transactional activity notifications
